--- a/backend/src/web/templates/base.html
+++ b/backend/src/web/templates/base.html
@@ -16,8 +16,8 @@
                     <a style="color:white;text-decoration: none" href="/">World Anime</a>
                 </h3>
             </div>
-              {% if nickname %}
-              <h5 style="margin-top: 20px;color: white;float:right">Bem vindo  {{nickname}}
+              {% if usuario_logado %}
+              <h5 style="margin-top: 20px;color: white;float:right">Bem vindo  {{usuario_logado.nome}}
                 <a href="{{logout_url}}">  sair</a>
               </h5>
               {% else %}
