--- a/backend/src/web/templates/mangas-naruto.html
+++ b/backend/src/web/templates/mangas-naruto.html
@@ -5,15 +5,28 @@
     {% block content %}
         <ul style="margin-top: 120px">
             <li>
-                <a href="/home/episodio?ep=naruto-668">Naruto ep668</a>
+                <a href="/home/episodio?ep=naruto-668&length=16">Naruto ep668</a>
             </li>
             <br>
             <li>
-                <a href="/home/episodio?ep=naruto-669">Naruto ep669</a>
+                <a href="/home/episodio?ep=naruto-669&length=17">Naruto ep669</a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-668&length=16">Naruto ep668-br</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-669&length=17">Naruto ep669-br</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-670&length=17">Naruto ep670-br</a>
             </li>
         </ul>
 
-        <img src=" ../static/img/naruto.jpg">
+    <img src=" ../static/img/naruto.jpg">
 
     {% endblock %}
 </body>
