--- a/backend/src/web/templates/mangas-one_piece.html
+++ b/backend/src/web/templates/mangas-one_piece.html
@@ -5,11 +5,11 @@
     {% block content %}
         <ul style="margin-top: 120px">
             <li>
-                <a href="/home/episodio?ep=onepiece-740">One Piece ep740</a>
+                <a href="/home/episodio?ep=onepiece-740&length=19">One Piece ep740</a>
             </li>
             <br>
             <li>
-                <a href="/home/episodio?ep=onepiece-731">One Peice ep741</a>
+                <a href="/home/episodio?ep=onepiece-731&length=18">One Peice ep741</a>
             </li>
         </ul>
 
