--- a/backend/src/web/templates/episodio.html
+++ b/backend/src/web/templates/episodio.html
@@ -10,6 +10,7 @@
     <img id="img" style=" margin-left: 400px">
      <script type="text/javascript">
             g_episodio = "{{episodio}}";
+            g_length = "{{length}}";
      </script>
      <script type="text/javascript" src="../static/js/scripts.js"></script>
 
