--- a/backend/src/web/templates/mangas-bleach.html
+++ b/backend/src/web/templates/mangas-bleach.html
@@ -5,11 +5,11 @@
     {% block content %}
         <ul style="margin-top: 120px">
             <li>
-                <a href="/home/episodio?ep=bleach-572">Bleach ep572</a>
+                <a href="/home/episodio?ep=bleach-572&length=17">Bleach ep572</a>
             </li>
             <br>
             <li>
-                <a href="/home/episodio?ep=bleach-573">Bleach ep573</a>
+                <a href="/home/episodio?ep=bleach-573&length=16">Bleach ep573</a>
             </li>
         </ul>
         <img src=" ../static/img/bleach.jpg">
