--- a/backend/src/web/templates/mangas-fairy_tail.html
+++ b/backend/src/web/templates/mangas-fairy_tail.html
@@ -5,11 +5,11 @@
     {% block content %}
         <ul style="margin-top: 120px">
             <li>
-                <a href="/home/episodio?ep=fairytail-375">Fairy Tail ep375</a>
+                <a href="/home/episodio?ep=fairytail-375&length=20">Fairy Tail ep375</a>
             </li>
             <br>
             <li>
-                <a href="/home/episodio?ep=fairytail-376">Fairy Fail ep376</a>
+                <a href="/home/episodio?ep=fairytail-376&length=23">Fairy Fail ep376</a>
             </li>
         </ul>
         <img src=" ../static/img/fairy-tail.jpg">
