--- a/backend/src/web/templates/mangas-bleach.html
+++ b/backend/src/web/templates/mangas-bleach.html
@@ -11,6 +11,19 @@
             <li>
                 <a href="/home/episodio?ep=bleach-573&length=16">Bleach ep573</a>
             </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=bleach-574&length=18">Bleach ep574</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=bleach-575&length=17">Bleach ep575</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=bleach-576&length=17">Bleach ep576</a>
+            </li>
+            <br>
         </ul>
         <img src=" ../static/img/bleach.jpg">
 
