--- a/backend/src/web/templates/mangas-fairy_tail.html
+++ b/backend/src/web/templates/mangas-fairy_tail.html
@@ -11,6 +11,20 @@
             <li>
                 <a href="/home/episodio?ep=fairytail-376&length=23">Fairy Fail ep376</a>
             </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=fairytail-377&length=22">Fairy Fail ep377</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=fairytail-378&length=20">Fairy Fail ep378</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=fairytail-379&length=24">Fairy Fail ep379</a>
+            </li>
+            <br>
+
         </ul>
         <img src=" ../static/img/fairy-tail.jpg">
     {% endblock %}
