--- a/backend/src/web/templates/mangas-naruto.html
+++ b/backend/src/web/templates/mangas-naruto.html
@@ -11,6 +11,44 @@
             <li>
                 <a href="/home/episodio?ep=naruto-669&length=17">Naruto ep669</a>
             </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto-670&length=17">Naruto ep670</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto-671&length=118">Naruto ep671</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto-672&length=16">Naruto ep672</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto-673&length=16">Naruto ep673</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto-674&length=16">Naruto ep674</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto-675&length=13">Naruto ep675</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto-676&length=16">Naruto ep676</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto-677&length=15">Naruto ep677</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto-678&length=16">Naruto ep678</a>
+            </li>
+            <br>
+
         </ul>
         <ul>
             <li>
@@ -24,6 +62,39 @@
             <li>
                 <a href="/home/episodio?ep=naruto/portugues-670&length=17">Naruto ep670-br</a>
             </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-671&length=18">Naruto ep671-br</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-672&length=15">Naruto ep672-br</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-673&length=16">Naruto ep673-br</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-674&length=16">Naruto ep674-br</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-675&length=17">Naruto ep675-br</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-676&length=15">Naruto ep676-br</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-677&length=15">Naruto ep677-br</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=naruto/portugues-678&length=16">Naruto ep678-br</a>
+            </li>
+            <br>
         </ul>
 
     <img src=" ../static/img/naruto.jpg">
