--- a/backend/src/web/templates/mangas-one_piece.html
+++ b/backend/src/web/templates/mangas-one_piece.html
@@ -11,6 +11,20 @@
             <li>
                 <a href="/home/episodio?ep=onepiece-731&length=18">One Peice ep741</a>
             </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=onepiece-742&length=18">One Peice ep742</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=onepiece-743&length=17">One Peice ep743</a>
+            </li>
+            <br>
+            <li>
+                <a href="/home/episodio?ep=onepiece-744&length=19">One Peice ep744</a>
+            </li>
+            <br>
+
         </ul>
 
         <img src=" ../static/img/one_piece.jpg">
